# homework_errors

./: pyproject.toml
project/: get_val.py  set_.py
tests/: .test_get_val_for_false_args.py.swp  test_get_val.py  test_get_val_for_empty_args.py  test_get_val_for_fauls_args.py  test_set_.py  test_set__for_empty_args.py  test_set__for_none_args.py  test_set__for_similar_path.py
