[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["<Всеволод Деменьшин> <<vdexpert11@yandex.ru>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
